
Changelog
=========

1.5.6 (unreleased)
-----
- Fixes group-less forms controlled by seantis.dir.base crashing

1.5.5
-----
- Put search and categories on different lines if more than two categories
  and the searchbox is active

1.5.4
-----
- Stop directory search from throwing exceptions if an empty string is given
- Show 'Whatever' instead of an empty string as default in filter combo boxes

1.5.3
-----
- Render ative/pulsating map markers in front of inactive ones
- Make core form work with directory again
- Prevents code from storing categories as sets (which trips up the keyword index)

1.5.2
-----
- Stop hooking up group forms completely, fixing an issue in seantis.dir.events

1.5.1
-----
- Limit portlet blocking to directory, making it easy to enable portlets for
  all items through the portlet settings of the directory. Fixes #4.
- Fixes form view failing on IDirectoryCategorized items outside a directory
- Fixes form reordering issue on group forms

1.5
---
- Adds a behavior with which any item can be used as a directory item.

  This is a major change to the way directories and their items relate to each
  other internally. All directories using seantis.dir.base have to be migrated
  by adding the new IDirectoryCategorized behavior to the each item and
  reimporting the typeinof.

- Adds category values to KML document
- View now use their own directory specific browserlayer
- Adds ability to define new xls exports through adapters
- Fixes crash in big excel exports
- Removes Directory Item Viewlets in Directory View. They have not been working
  correctly sinde 1.3 anyway.
- Defines slots in macros which may be replaced by directories building on
  seantis.dir.base. This may be used as an alternative to the viewlets.

1.4.1
-----
- Provide better default template for result list entry
- Provide a macro for default directory information
- Fixes search viewlet being hidden on item view