@@ -5,6 +5,8 @@ Changelog
 1.5.6 (unreleased)
 -----
 - Fixes group-less forms controlled by seantis.dir.base crashing
+- Temporarily reintroduces jq as jQuery alias for collective.geo.mapwidget 
+  until the new release is out of beta.
 
 1.5.5
 -----
